--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="./src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app">
-      <h1>TypeScript Sandbox</h1>
+    <div class="turno-display">
+      <button id="turnoAnterior">Anterior</button>
+      <h1 class="numero-turno">01</h1>
+      <button id="turnoSiguiente">Siguiente</button>
     </div>
+    <div class="texto-turno">Por favor, acérquese al mostrador</div>
+    <button id="Reset">Reiniciar contador</button>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
