--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="./src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>CONTADOR</title>
   </head>
   <body>
-    <div class="turno-display">
-      <button id="turnoAnterior">Anterior</button>
-      <h1 class="numero-turno">01</h1>
-      <button id="turnoSiguiente">Siguiente</button>
+    <div class="contenedor-contador">
+      <div id="contador">00</div>
+      <button id="btn-anterior">Anterior</button>
+      <button id="btn-siguiente">Siguiente</button>
     </div>
     <div class="texto-turno">Por favor, acérquese al mostrador</div>
-    <button id="Reset">Reiniciar contador</button>
+    <button id="btn-reset">Reiniciar contador</button>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
