experimentando el cambio de turno

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     </div>
     <div class="texto-turno">Por favor, acérquese al mostrador</div>
     <button id="btn-reset">Reiniciar contador</button>
+    <div>
+      <input id="input-turno" type="text" placeholder="Elige el turno" />
+      <button id="btn-cambiar">Cambiar</button>
+    </div>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
