añadida función avanzada

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="texto-turno">Por favor, acérquese al mostrador</div>
     <button id="btn-reset">Reiniciar contador</button>
     <div>
-      <input id="input-turno" type="text" placeholder="Elige el turno" />
+      <input id="input-contador" type="text" placeholder="Elige el turno" />
       <button id="btn-cambiar">Cambiar</button>
     </div>
 
